styles.css
@import url('https://fonts.googleapis.com/css?family=Trirong');

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    margin: 0;
    overflow-x: hidden;
    font-size: 100%;
}

::-webkit-scrollbar {
    width: 12px;
    height: 10px;
  }
  
  ::-webkit-scrollbar-thumb {
    background: rgb(221, 221, 221);
  }
  
  ::-webkit-scrollbar-track {
    background: rgba(187, 187, 187, 0.778);
  }

/*/  Top of Page Logo  //*/
.home-logo {
    display: flex;
    justify-content: center;
}

#home-logo {
    width: 80px;
    height: 55px;
    padding-top: 10px;
    padding-bottom: 8px;
}

/*/  Home Navigation  //*/
.home-navigation {
    display: flex;
    justify-content: center;
    background-color: rgba(226, 226, 226, 0.572);
    height: 39px;
}

.home-nav-titles {
    display: flex;
    flex-wrap: wrap;
    gap: 55px;
    font-family: "Audiowide", sans-serif;
    font-weight: lighter;
    font-size: .92rem;
    letter-spacing: 1px;
    align-content: center;
}

#NavigateAbout {
    display: inline-block;
    position: relative;
    text-decoration-line: none;
    color: black;
}#NavigateAbout::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 1px;
    bottom: 0;
    right: 0;
    background-color: black;
    transform: scaleX(0);
    transform-origin: bottom center;
    transition: transform 0.25s ease-out;
}#NavigateAbout:hover::after {
    transform: scaleX(1);
    transform-origin: bottom center;
}
#NavigateContact {
    display: inline-block;
    position: relative;
    text-decoration-line: none;
    color: black;
}#NavigateContact::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 1px;
    bottom: 0;
    right: 0;
    background-color: black;
    transform: scaleX(0);
    transform-origin: bottom center;
    transition: transform 0.25s ease-out;
}#NavigateContact:hover::after {
    transform: scaleX(1);
    transform-origin: bottom center;
}
#NavigateProjects {
    display: inline-block;
    position: relative;
    text-decoration-line: none;
    color: black;
}#NavigateProjects::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 1px;
    bottom: 0;
    right: 0;
    background-color: black;
    transform: scaleX(0);
    transform-origin: bottom center;
    transition: transform 0.25s ease-out;
}#NavigateProjects:hover::after {
    transform: scaleX(1);
    transform-origin: bottom center;
}

/*/  Home Image 1  //*/
.home-image-class {
    display: flex;
    box-sizing: content-box;
    position: relative;
    width: 100vw;
}

.home-image {
    display: -webkit-flex;
    margin-left: auto;
    position: relative;
    width: 60vw;
    z-index: -5;
}

.name-stack {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
}

  /*/  Name  //*/
.name-header {
    display: inline-flex;
    /* position: relative; */
    /* align-items: center; */
    /* flex-wrap: nowrap; */
    /* position: absolute; */
    /* margin-left: 15vw;
    margin-top: 20vw; */
}

#header-name {
    font-family: 'Lexend Peta', sans-serif;
    font-family: 'Montserrat', sans-serif;
    font-family: 'Quicksand', sans-serif;
    font-family: 'Raleway', sans-serif;
    /* font-size: 3rem; */
    font-size: 4vw;
    text-transform: uppercase;
    margin-left: 10vw;
    color:  rgb(0, 0, 0);
    letter-spacing: 1px;
}

/*/ Stack Dec Logo /*/
.logo {
    display: flex;
    /* align-items: center; */
    /* position: absolute; */
    /* flex-direction: row; */
    gap: 2vw;
    margin-left: 8vw;
    /* margin-top: 18vh; */
}

#react-logo {
    width: 2.8vw;
    filter: opacity(50%);
    -webkit-filter: opacity(45%);
    background-color: rgb(255, 255, 255);
}

/*/  Description  //*/
.description-header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 6px;
    margin-bottom: 6px;
    letter-spacing: 1px;
}

#header-des {
    /* font-family: "Audiowide", sans-serif;
    font-weight: lighter;
    font-stretch: expanded;
    font-size: 1.12rem;
    letter-spacing: 1px; */
    display: flex;
    justify-content: center;
    font-family: "Gill Sans", sans-serif;
    font-stretch:extra-expanded;
    font-weight: lighter;
    text-transform: uppercase;
    font-size: 2.3vw;
    color:  rgb(0, 0, 0);
}

/*/  Quote  //*/
.quote-space {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgba(226, 226, 226, 0.572);
    height: 300px;
}

/* .quote-outline {
    display: flex;
    justify-content: center;
    position: absolute;
    margin-top: 50px;
    margin-left: 150px;
    border: solid 1px rgba(162, 162, 162, 0.486);
    width: 45vw;
    height: 200px;
} */

#quote {
    /* justify-content: center; */
    /* position: relative; */
    /* margin-top: 100px; */
    /* margin-left: 30vw; */
    font-family: "Gill Sans", sans-serif;
    font-weight: 300;
    font-stretch: expanded;
    font-size: 1.5rem;
    letter-spacing: 1.2px;
    z-index: 10;
}

#author {
    /* justify-content: center; */
    /* position: relative; */
    /* margin-top: 145px; */
    margin-left: 12vw;
    font-family: "Gill Sans", sans-serif;
    font-weight: 300;
    font-stretch: expanded;
    font-size: 1.4rem;
    letter-spacing: 1.2px;
    z-index: 10;
}

#header-about {
    display: flex;
    justify-content: center;
    font-family: "Gill Sans", sans-serif;
    font-stretch:extra-expanded;
    font-weight: lighter;
    text-transform: uppercase;
    /* font-size: 2rem; */
    font-size: 2rem;
    padding-top: 40px;
    color:  rgb(0, 0, 0);
    letter-spacing: 1.5px;
}

.about-me {
    display: flex;
    justify-content: center;
    padding: 0px 150px;
    text-align: justify;
    font-family: 'Montserrat', sans-serif;
    font-family: 'Quicksand', sans-serif;
    font-size: 1.2rem;
}
/* ... */

